@@ -148,6 +148,7 @@ project.ext {
             "--add-opens", "org.apache.commons.io/org.apache.commons.io.input=io.xpipe.ext.proc",
             "--add-opens", "net.synedra.validatorfx/net.synedra.validatorfx=io.xpipe.app",
             "--add-opens", "java.base/java.nio.file=io.xpipe.app",
+            "--add-opens", "java.base/java.lang=io.xpipe.app",
             "--add-exports", "javafx.graphics/com.sun.javafx.tk=io.xpipe.app",
             "--add-exports", "jdk.zipfs/jdk.nio.zipfs=io.xpipe.modulefs",
             "--add-opens", "javafx.graphics/com.sun.glass.ui=io.xpipe.app",
